--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,7 +2,7 @@ contact_us: /contact-us/
 show_reach: true
 faq: /faq/
 social_media:
-  facebook: https://www.facebook.com/YourFBPage
+  facebook: https://www.facebook.com/people/Geylang-Methodist-School-Secondary/100027880047289/
   twitter: https://www.twitter.com/YourTwitter
   youtube: https://www.youtube.com/YourYoutube
   instagram: https://www.instagram.com/your.insta/
