--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,6 @@ collections:
   about-us:
     output: true
     order:
-      - folder-page.md
+      - Non Financial Information.md
       - example-subfolder/.keep
       - example-subfolder/subfolder-page.md
