--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Our GM Community/.keep
       - Student Achievement.md
       - Former Students' Achievement.md
       - Photo Gallery/.keep
