--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Our GM Community/Our GM Community.md
       - Our GM Community/.keep
       - Our GM Community/Our Alumni.md
       - Our GM Community/Our Partners.md
