--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Vision, Mission and Values.md
       - School Crest and Song.md
       - School Virtual Tour.md
       - Board of Management.md
