--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -13,6 +13,7 @@ collections:
       - Our GM Community/Our Alumni.md
       - Our GM Community/Our Partners.md
       - Our GM Community/Our Staff.md
+      - Academic Matters/2020 GCE 'O' level.md
       - Academic Matters/2021 GCE 'N' Level.md
       - Academic Matters/2021 GCE 'O' Level.md
       - Academic Matters/.keep
