--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   curriculum:
     output: true
     order:
+      - Non Academic/Cyber Wellness.md
       - Non Academic/Information & Communications Technology (ICT).md
       - Non Academic/Student Management.md
       - Non Academic/Values in Action (VIA).md
