--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   curriculum:
     output: true
     order:
+      - Academic/.keep
       - Non Academic/Character & Citizenship Education (CCE).md
       - Non Academic/Cyber Wellness.md
       - Non Academic/Information & Communications Technology (ICT).md
