--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   curriculum:
     output: true
     order:
+      - Academic/Music.md
       - Academic/Physical Education.md
       - Academic/.keep
       - Non Academic/Character & Citizenship Education (CCE).md
