--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   curriculum:
     output: true
     order:
+      - Academic/Design & Technology (D&T).md
       - Academic/Elements of Business Skills (EBS).md
       - Academic/Nutrition & Food Science.md
       - Academic/Music.md
