--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   curriculum:
     output: true
     order:
+      - Academic/Humanities.md
       - Academic/Art.md
       - Academic/Computer Applications (CPA).md
       - Academic/Design & Technology (D&T).md
