--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   curriculum:
     output: true
     order:
+      - Academic/Science.md
       - Academic/Mother Tongue.md
       - Academic/Humanities.md
       - Academic/Art.md
