--- a/_cce/collection.yml
+++ b/_cce/collection.yml
@@ -2,5 +2,6 @@ collections:
   cce:
     output: true
     order:
+      - Character & Citizenship Education (CCE).md
       - Post Secondary Pathways.md
       - Sexuality Education.md
