--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,3 +6,5 @@ links:
     collection: curriculum
   - title: cce
     collection: cce-ecg
+  - title: Special Programme
+    collection: special-programme
