--- a/_special-programme/collection.yml
+++ b/_special-programme/collection.yml
@@ -2,5 +2,6 @@ collections:
   special-programme:
     output: true
     order:
+      - Learning For Life Programme (LLP).md
       - NANT Talent Development.md
       - Student Initiated Learning (SIL).md
