--- a/_special-programme/collection.yml
+++ b/_special-programme/collection.yml
@@ -2,6 +2,7 @@ collections:
   special-programme:
     output: true
     order:
+      - Family Education Programmes.md
       - GEMS Challenge.md
       - Applied Learning Programme (ALP).md
       - Learning For Life Programme (LLP).md
