--- a/_staff/collection.yml
+++ b/_staff/collection.yml
@@ -2,6 +2,7 @@ collections:
   staff:
     output: true
     order:
+      - School Executive Committee (SEC).md
       - Teaching Staff & School Counsellor.md
       - EAS.md
       - ECG Counsellor.md
