--- a/_staff/collection.yml
+++ b/_staff/collection.yml
@@ -4,5 +4,5 @@ collections:
     order:
       - School Executive Committee (SEC).md
       - Teaching Staff & School Counsellor.md
-      - EAS.md
+      - Executive & Administrative Staff (EAS).md
       - ECG Counsellor.md
