--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,5 +2,6 @@ collections:
   students:
     output: true
     order:
+      - Subject Combination.md
       - Thematic Reading.md
       - Full Subject Based Banding (FSBB).md
