--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - Information on Edusave Awards.md
       - Students' Timetable.md
       - Subject Combination.md
       - Thematic Reading.md
