--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - Financial Assistance and Bursary Schemes.md
       - Information on Edusave Awards.md
       - Students' Timetable.md
       - Subject Combination.md
