--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - Rules for Special Rooms/Computer Laboratory Rules.md
       - Rules for Special Rooms/School Library Rules.md
       - Rules for Special Rooms/.keep
       - Financial Assistance and Bursary Schemes.md
