--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - Rules for Special Rooms/Science Laboratory.md
       - Rules for Special Rooms/Design and Technology (D&T).md
       - Rules for Special Rooms/FCE Food Laboratory.md
       - Rules for Special Rooms/Computer Laboratory Rules.md
