--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -12,5 +12,6 @@ collections:
       - Sports/Softball.md
       - Sports/Table Tennis.md
       - Sports/Volleyball (Boys).md
+      - Clubs and Societies/Media Resources (MR).md
       - Clubs and Societies/.keep
       - Clubs and Societies/Photography & Videography Society (PVS).md
