--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -12,6 +12,7 @@ collections:
       - Sports/Softball.md
       - Sports/Table Tennis.md
       - Sports/Volleyball (Boys).md
+      - Clubs and Societies/Board Games Club.md
       - Clubs and Societies/Digital Media Society.md
       - Clubs and Societies/Media Resources (MR).md
       - Clubs and Societies/.keep
