--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca:
     output: true
     order:
+      - Aesthetics/.keep
       - Sports/.keep
       - Sports/Athletics.md
       - Sports/Badminton.md
