--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -12,6 +12,7 @@ collections:
       - Sports/Softball.md
       - Sports/Table Tennis.md
       - Sports/Volleyball (Boys).md
+      - Aesthetics/Choir.md
       - Aesthetics/English Drama Club.md
       - Aesthetics/.keep
       - Clubs and Societies/.keep
