--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -12,6 +12,7 @@ collections:
       - Sports/Softball.md
       - Sports/Table Tennis.md
       - Sports/Volleyball (Boys).md
+      - UGs/Boys' Brigade.md
       - UGs/Girl Guides.md
       - UGs/Girls’ Brigade.md
       - UGs/.keep
