--- a/_non-academic/collection.yml
+++ b/_non-academic/collection.yml
@@ -2,4 +2,4 @@ collections:
   non-academic:
     output: true
     order:
-      - CCE, ECG, Sexuality Education/.keep
+      - CCE, ECG & Sexuality Education/.keep
