--- a/_non-academic/collection.yml
+++ b/_non-academic/collection.yml
@@ -2,5 +2,6 @@ collections:
   non-academic:
     output: true
     order:
+      - CCE, ECG & Sexuality Education/Post Secondary Pathways.md
       - CCE, ECG & Sexuality Education/Sexuality Education.md
       - CCE, ECG & Sexuality Education/.keep
