--- a/_non-academic/collection.yml
+++ b/_non-academic/collection.yml
@@ -2,7 +2,8 @@ collections:
   non-academic:
     output: true
     order:
-      - CCE, ECG & Sexuality Education/Character & Citizenship Education (CCE).md
+      - CCE, ECG & Sexuality Education/Character & Citizenship Education (CCE)
+        1.md
       - CCE, ECG & Sexuality Education/Post Secondary Pathways.md
       - CCE, ECG & Sexuality Education/Sexuality Education.md
       - CCE, ECG & Sexuality Education/.keep
