--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -15,6 +15,7 @@ collections:
       - Academic/Music.md
       - Academic/Physical Education.md
       - Academic/.keep
+      - Non Academic/Character & Citizenship Education (CCE) 1.md
       - Non Academic/Character & Citizenship Education (CCE).md
       - Non Academic/Cyber Wellness.md
       - Non Academic/Information & Communications Technology (ICT).md
