--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -17,7 +17,7 @@ collections:
       - Academic/.keep
       - Non Academic/.keep
       - Non Academic/Cyber Wellness.md
-      - Non Academic/Character & Citizenship Education (CCE) 1.md
+      - Non Academic/Character & Citizenship Education (CCE).md
       - Non Academic/Information & Communications Technology (ICT).md
       - Non Academic/Student Management.md
       - Non Academic/Values in Action (VIA).md
