--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,5 +2,6 @@ collections:
   useful-links:
     output: true
     order:
+      - Useful Links for Staff.md
       - Useful Links for Students.md
       - Useful Links for Parents.md
