--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - School Calendar.md
       - Useful Links for Staff.md
       - Useful Links for Students.md
       - Useful Links for Parents.md
