--- a/_archieve-of-information/collection.yml
+++ b/_archieve-of-information/collection.yml
@@ -1,5 +1,5 @@
 collections:
-  achieve-of-information:
+  archieve-of-information:
     output: true
     order:
       - Archive of Information.md
