--- a/_archive-of-information/collection.yml
+++ b/_archive-of-information/collection.yml
@@ -1,5 +1,5 @@
 collections:
-  archieve-of-information:
+  archive-of-information:
     output: true
     order:
       - Archive of Information.md
