--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -25,5 +25,5 @@ collections:
       - Student Achievement.md
       - Former Students' Achievement.md
       - Photo Gallery/.keep
-      - Photo Gallery/subfolder-page.md
+      - Photo Gallery/2022.md
       - Non Financial Information.md
