--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -24,6 +24,7 @@ collections:
       - Academic Matters/.keep
       - Student Achievement.md
       - Former Students' Achievement.md
+      - Photo Gallery/2018.md
       - Photo Gallery/2019.md
       - Photo Gallery/2020.md
       - Photo Gallery/2021.md
