--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,6 +7,7 @@ collections:
       - Vision, Mission and Values.md
       - School Crest and Song.md
       - School Virtual Tour.md
+      - School Achievements/2022.md
       - School Achievements/.keep
       - Board of Management.md
       - Our GM Community/.keep
