--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,6 +7,7 @@ collections:
       - Vision, Mission and Values.md
       - School Crest and Song.md
       - School Virtual Tour.md
+      - School Achievements/2019.md
       - School Achievements/2020.md
       - School Achievements/2021.md
       - School Achievements/2022.md
