--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -30,7 +30,7 @@ collections:
       - Academic Matters/2021 GCE 'N' Level.md
       - Academic Matters/2021 GCE 'O' Level.md
       - Former Students' Achievement.md
-      - Photo Gallery/Photo Gallery 2017.md
+      - Photo Gallery/2017.md
       - Photo Gallery/.keep
       - Photo Gallery/2018.md
       - Photo Gallery/2019.md
