--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@ colors:
   secondary-color: "#3535fc"
   media-colors:
     - title: media-color-one
-      color: "#edf650"
+      color: "#f6c619"
     - title: media-color-two
-      color: "#744d9f"
+      color: "#1d1df1"
     - title: media-color-three
-      color: "#00838f"
+      color: "#f65519"
     - title: media-color-four
-      color: "#00838f"
+      color: "#1c16fa"
     - title: media-color-five
-      color: "#00838f"
+      color: "#f1f70c"
 description: ""
 permalink: none
 baseurl: ""
