--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@ title: Geylang Methodist School (Secondary)
 url: https://geylangmethodistsec.moe.edu.sg
 favicon: /images/favicon-isomer.ico
 colors:
-  primary-color: "#f7fc2d"
+  primary-color: "#1f0cf6"
   secondary-color: "#3535fc"
   media-colors:
     - title: media-color-one
-      color: "#f6c619"
+      color: "#fefe53"
     - title: media-color-two
       color: "#1d1df1"
     - title: media-color-three
