--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Geylang Methodist School (Secondary)
 url: https://geylangmethodistsec.moe.edu.sg
-favicon: /images/favicon-isomer.ico
+favicon: /images/GMS(S) ver3 png.png
 colors:
   primary-color: "#1f0cf6"
   secondary-color: "#9013fe"
