--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@ url: https://geylangmethodistsec.moe.edu.sg
 favicon: /images/GMS(S) ver3 png.png
 colors:
   primary-color: "#1f0cf6"
-  secondary-color: "#9013fe"
+  secondary-color: "#d0021b"
   media-colors:
     - title: media-color-one
       color: "#f1fa58"
     - title: media-color-two
       color: "#fdbe13"
     - title: media-color-three
-      color: "#d0021b"
+      color: "#f75e70"
     - title: media-color-four
       color: "#1c16fa"
     - title: media-color-five
