--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Geylang Methodist School (Secondary)
 url: https://geylangmethodistsec.moe.edu.sg
 favicon: /images/GMS(S) ver3 png.png
 colors:
-  primary-color: "#1f0cf6"
-  secondary-color: "#d0021b"
+  primary-color: "#2f3191"
+  secondary-color: "#ec1d24"
   media-colors:
     - title: media-color-one
       color: "#f1fa58"
