--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -8,7 +8,7 @@ collections:
       - School Virtual Tour.md
       - School History.md
       - Board of Management.md
-      - Staff.md
+      - School Executive Committee (SEC).md
       - Our GM Community/.keep
       - Our GM Community/Our GM Community.md
       - Our GM Community/Our Alumni.md
