--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -11,7 +11,7 @@ collections:
       - School Executive Committee (SEC).md
       - Our GM Community/.keep
       - Our GM Community/GM Family.md
-      - Our GM Community/Our Alumni.md
+      - Our GM Community/GM Alumni.md
       - Our GM Community/Our Partners.md
       - Our GM Community/Our Staff.md
       - School Achievements/.keep
