--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -9,6 +9,7 @@ collections:
       - School History.md
       - Board of Management.md
       - School Executive Committee (SEC).md
+      - Our GM Community/School Executive Committee (SEC).md
       - Our GM Community/.keep
       - Our GM Community/GM Family.md
       - Our GM Community/GM Alumni.md
