--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -12,7 +12,7 @@ collections:
       - Our GM Community/.keep
       - Our GM Community/GM Family.md
       - Our GM Community/GM Alumni.md
-      - Our GM Community/Our Partners.md
+      - Our GM Community/GM Partners.md
       - Our GM Community/Our Staff.md
       - School Achievements/.keep
       - School Achievements/2018.md
