--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -10,7 +10,7 @@ collections:
       - Board of Management.md
       - School Executive Committee (SEC).md
       - Our GM Community/.keep
-      - Our GM Community/GM Family.md
+      - Our GM Community/GM Community.md
       - Our GM Community/GM Alumni.md
       - Our GM Community/GM Partners.md
       - Our GM Community/Our Staff.md
