--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -13,7 +13,7 @@ collections:
       - Our GM Community/GM Community.md
       - Our GM Community/GM Alumni.md
       - Our GM Community/GM Partners.md
-      - Our GM Community/Our Staff.md
+      - Our GM Community/GMStaff.md
       - School Achievements/.keep
       - School Achievements/2018.md
       - School Achievements/2019.md
