--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -9,11 +9,11 @@ collections:
       - School History.md
       - Board of Management.md
       - School Executive Committee (SEC).md
-      - Our GM Community/.keep
-      - Our GM Community/GM Community.md
-      - Our GM Community/GM Alumni.md
-      - Our GM Community/GM Partners.md
-      - Our GM Community/GM Staff.md
+      - GM Community/.keep
+      - GM Community/GM Community.md
+      - GM Community/GM Alumni.md
+      - GM Community/GM Partners.md
+      - GM Community/GM Staff.md
       - School Achievements/.keep
       - School Achievements/2018.md
       - School Achievements/2019.md
