--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -8,6 +8,7 @@ collections:
       - School Virtual Tour.md
       - School History.md
       - Board of Management.md
+      - GM Family/Executive and Administrative Staff (EAS).md
       - GM Family/Teaching Staff & School Counsellor.md
       - GM Family/.keep
       - GM Family/School Executive Committee (SEC).md
