--- a/_staff/collection.yml
+++ b/_staff/collection.yml
@@ -5,4 +5,4 @@ collections:
       - School Executive Committee (SEC).md
       - Teaching Staff & School Counsellor.md
       - Executive & Administrative Staff (EAS).md
-      - ECG Counsellor.md
+      - ECG.md
