--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,5 @@ links:
     collection: staff
   - title: Students
     collection: students
-  - title: CCA
-    collection: cca
+  - title: Ccas
+    collection: ccas
