--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,5 @@ links:
     collection: students
   - title: Ccas
     collection: ccas
+  - title: Special Programmes
+    collection: special-programme
