--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,6 @@ links:
   - title: Ccas
     collection: ccas
   - title: Special Programmes
-    collection: special-programme
+    collection: special-programmes
   - title: Students
     collection: students
