--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -10,7 +10,7 @@ collections:
       - Rules for Special Rooms/Science Laboratory.md
       - Rules for Special Rooms/Design and Technology (D&T).md
       - Rules for Special Rooms/FCE Food Laboratory.md
-      - Rules for Special Rooms/Computer Laboratory Rules.md
+      - Rules for Special Rooms/Computer Laboratory.md
       - Rules for Special Rooms/School Library Rules.md
       - Students' Timetable.md
       - Subject Combination.md
