--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -11,7 +11,7 @@ collections:
       - Rules for Special Rooms/Design and Technology (D&T).md
       - Rules for Special Rooms/FCE Food Laboratory.md
       - Rules for Special Rooms/Computer Laboratory.md
-      - Rules for Special Rooms/School Library Rules.md
+      - Rules for Special Rooms/School Library.md
       - Students' Timetable.md
       - Subject Combination.md
       - Thematic Reading.md
