--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -2,7 +2,7 @@ collections:
   ccas:
     output: true
     order:
-      - CCAs Schedule.md
+      - CCAs Schedule and Venues.md
       - Sports/.keep
       - Sports/Athletics.md
       - Sports/Badminton.md
