--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -6,7 +6,7 @@ collections:
       - Sports/.keep
       - Sports/Athletics.md
       - Sports/Badminton.md
-      - Sports/Basketball.md
+      - Sports/Basketball (Boys).md
       - Sports/Bowling.md
       - Sports/Football.md
       - Sports/Netball.md
