--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -23,6 +23,7 @@ collections:
       - Aesthetics/Chinese Dance.md
       - Aesthetics/Choir.md
       - Aesthetics/English Drama Club.md
+      - Clubs and Societies/Media@GM.md
       - Clubs and Societies/.keep
       - Clubs and Societies/Board Games Club.md
       - Clubs and Societies/Digital Media Society.md
