--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ links:
     collection: about-us
   - title: Curriculum
     collection: curriculum
-  - title: Ccas
+  - title: CCAs
     collection: ccas
   - title: Special Programmes
     collection: special-programmes
