--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,6 +7,7 @@ collections:
       - School Crest and Song.md
       - School Virtual Tour.md
       - Board of Management.md
+      - School History/GM Principals.md
       - School History/.keep
       - School History/School History.md
       - GM Family/.keep
