--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,7 +7,7 @@ collections:
       - School Crest and Song.md
       - School Virtual Tour.md
       - Board of Management.md
-      - School History/GM BOM Chairmen.md
+      - School History/BOM Chairmen.md
       - School History/.keep
       - School History/School History.md
       - School History/GM Principals.md
