--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -10,7 +10,7 @@ collections:
       - School History/BOM Chairmen.md
       - School History/.keep
       - School History/School History.md
-      - School History/GM Principals.md
+      - School History/Principals.md
       - GM Family/.keep
       - GM Family/School Executive Committee (SEC).md
       - GM Family/Teaching Staff & School Counsellor.md
