--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,5 @@ links:
     collection: special-programmes
   - title: Students
     collection: students
+  - title: GM 100
+    collection: about-us
