--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -10,7 +10,7 @@ collections:
       - Sports/Bowling.md
       - Sports/Football.md
       - Sports/Netball.md
-      - Sports/Softball.md
+      - Sports/Softball (Girls).md
       - Sports/Table Tennis.md
       - Sports/Volleyball (Boys).md
       - UGs/Boys' Brigade.md
