--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -11,7 +11,7 @@ collections:
       - Sports/Football.md
       - Sports/Netball.md
       - Sports/Softball (Girls).md
-      - Sports/Table Tennis.md
+      - Sports/Table Tennis (Boys).md
       - Sports/Volleyball (Boys).md
       - UGs/Boys' Brigade.md
       - UGs/Girl Guides.md
