--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -11,6 +11,7 @@ collections:
       - School History/School History.md
       - School History/Principals.md
       - School History/BOM Chairmen.md
+      - GM Family/Useful Links for Staff.md
       - GM Family/.keep
       - GM Family/School Executive Committee (SEC).md
       - GM Family/Teaching Staff & School Counsellor.md
