--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -11,11 +11,11 @@ collections:
       - School History/School History.md
       - School History/Principals.md
       - School History/BOM Chairmen.md
-      - GM Family/Useful Links for Staff.md
-      - GM Family/.keep
-      - GM Family/School Executive Committee (SEC).md
-      - GM Family/Teaching Staff & School Counsellor.md
-      - GM Family/Executive and Administrative Staff (EAS).md
+      - Staff/Useful Links for Staff.md
+      - Staff/.keep
+      - Staff/School Executive Committee (SEC).md
+      - Staff/Teaching Staff & School Counsellor.md
+      - Staff/Executive and Administrative Staff (EAS).md
       - GM Community/.keep
       - GM Community/GM Alumni.md
       - GM Community/GM Partners.md
