--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -30,7 +30,7 @@ collections:
       - School Achievements/2022.md
       - Student Achievement.md
       - Academic Matters/.keep
-      - Academic Matters/2021 GCE 'O' Level.md
+      - Academic Matters/2021 GCE O Level.md
       - Academic Matters/2021 GCE 'N' Level.md
       - Academic Matters/2020 GCE 'O' level.md
       - Academic Matters/2020 GCE 'N' level.md
