--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -31,7 +31,7 @@ collections:
       - Student Achievement.md
       - Academic Matters/.keep
       - Academic Matters/2021 GCE O Level.md
-      - Academic Matters/2021 GCE 'N' Level.md
+      - Academic Matters/2021 GCE N Level.md
       - Academic Matters/2020 GCE 'O' level.md
       - Academic Matters/2020 GCE 'N' level.md
       - Former Students' Achievement.md
