--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -29,6 +29,7 @@ collections:
       - School Achievements/2021.md
       - School Achievements/2022.md
       - Student Achievement.md
+      - Academic Matters/2022 GCE O Level.md
       - Academic Matters/.keep
       - Academic Matters/2021 GCE O Level.md
       - Academic Matters/2021 GCE N Level.md
