--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -34,7 +34,7 @@ collections:
       - Academic Matters/2022 GCE N Level.md
       - Academic Matters/2021 GCE O Level.md
       - Academic Matters/2021 GCE N Level.md
-      - Academic Matters/2020 GCE 'O' level.md
+      - Academic Matters/2020 GCE O Level.md
       - Academic Matters/2020 GCE 'N' level.md
       - Former Students' Achievement.md
       - Photo Gallery/.keep
