--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -35,7 +35,7 @@ collections:
       - Academic Matters/2021 GCE O Level.md
       - Academic Matters/2021 GCE N Level.md
       - Academic Matters/2020 GCE O Level.md
-      - Academic Matters/2020 GCE 'N' level.md
+      - Academic Matters/2020 GCE N Level.md
       - Former Students' Achievement.md
       - Photo Gallery/.keep
       - Photo Gallery/2017.md
