--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -28,7 +28,7 @@ collections:
       - School Achievements/2020.md
       - School Achievements/2019.md
       - School Achievements/2018.md
-      - Student Achievement.md
+      - GM All Round Excellence Award.md
       - Academic Matters/.keep
       - Academic Matters/2022 GCE O Level.md
       - Academic Matters/2022 GCE N Level.md
