--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -29,13 +29,13 @@ collections:
       - School Achievements/2019.md
       - School Achievements/2018.md
       - GM All Round Excellence Award.md
-      - Academic Matters/.keep
-      - Academic Matters/2022 GCE O Level.md
-      - Academic Matters/2022 GCE N Level.md
-      - Academic Matters/2021 GCE O Level.md
-      - Academic Matters/2021 GCE N Level.md
-      - Academic Matters/2020 GCE O Level.md
-      - Academic Matters/2020 GCE N Level.md
+      - Academic Achievements/.keep
+      - Academic Achievements/2022 GCE O Level.md
+      - Academic Achievements/2022 GCE N Level.md
+      - Academic Achievements/2021 GCE O Level.md
+      - Academic Achievements/2021 GCE N Level.md
+      - Academic Achievements/2020 GCE O Level.md
+      - Academic Achievements/2020 GCE N Level.md
       - Former Students' Achievement.md
       - Photo Gallery/.keep
       - Photo Gallery/2017.md
