--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -36,7 +36,7 @@ collections:
       - Academic Achievements/2021 GCE N Level.md
       - Academic Achievements/2020 GCE O Level.md
       - Academic Achievements/2020 GCE N Level.md
-      - Former Students' Achievement.md
+      - Former Students' Achievements.md
       - Photo Gallery/.keep
       - Photo Gallery/2017.md
       - Photo Gallery/2018.md
