--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -18,7 +18,7 @@ collections:
       - School History/School History.md
       - School History/Principals.md
       - School History/BOM Chairmen.md
-      - GM All Round Excellence Award.md
+      - All Round Excellence Award.md
       - School Achievements/.keep
       - School Achievements/2022.md
       - School Achievements/2021.md
