--- a/_special-programmes/collection.yml
+++ b/_special-programmes/collection.yml
@@ -6,5 +6,5 @@ collections:
       - Family Education Programmes.md
       - GEMS Challenge.md
       - Learning For Life Programme (LLP).md
-      - NANT Talent Development.md
+      - SHINE & GEAR UP Programmes.md
       - Student Initiated Learning (SIL).md
