--- a/_non-academic/collection.yml
+++ b/_non-academic/collection.yml
@@ -4,6 +4,6 @@ collections:
     order:
       - CCE, ECG & Sexuality Education/.keep
       - CCE, ECG & Sexuality Education/Character & Citizenship Education (CCE).md
-      - CCE, ECG & Sexuality Education/Education & Career Guidance.md
+      - CCE, ECG & Sexuality Education/Education & Career Guidance (ECG).md
       - CCE, ECG & Sexuality Education/Post Secondary Pathways.md
       - CCE, ECG & Sexuality Education/Sexuality Education.md
