--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,5 +2,6 @@ collections:
   parents:
     output: true
     order:
+      - Financial Assistance and Bursary Schemes.md
       - Parent Support Group.md
       - Useful Links for Parents.md
