--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - Information on Edusave Awards.md
       - Financial Assistance and Bursary Schemes.md
       - Parent Support Group.md
       - Useful Links for Parents.md
