--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - National Digital Literacy Programme.md
       - Family Education Programmes.md
       - Financial Assistance and Bursary Schemes.md
       - Full Subject Based Banding (FSBB).md
