--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -33,6 +33,7 @@ collections:
       - Academic Achievements/2020 GCE N Level.md
       - Former Students' Achievements.md
       - All Round Excellence Award.md
+      - Photo Gallery/2023.md
       - Photo Gallery/.keep
       - Photo Gallery/2022.md
       - Photo Gallery/2021.md
