--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -9,7 +9,7 @@ collections:
       - School History/School History.md
       - School History/Principals.md
       - School History/BOM Chairmen.md
-      - School Virtual Tour.md
+      - Virtual Introduction.md
       - Board of Management.md
       - Staff/.keep
       - Staff/School Executive Committee (SEC).md
