--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Education and Career Guidance.md
       - Rules for Special Rooms/.keep
       - Rules for Special Rooms/Science Laboratory.md
-      - Rules for Special Rooms/Design and Technology (D&T).md
+      - Rules for Special Rooms/Design and Technology (D&T) Studio.md
       - Rules for Special Rooms/FCE Food Laboratory.md
       - Rules for Special Rooms/Computer Laboratory.md
       - Rules for Special Rooms/School Library.md
