--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - OPAC.md
       - Education and Career Guidance.md
       - ICT Matters.md
       - Rules for Special Rooms/.keep
