--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ colors:
     - title: media-color-two
       color: "#fdbe13"
     - title: media-color-three
-      color: "#f1fa58"
+      color: "#ec1d24"
     - title: media-color-four
       color: "#1c16fa"
     - title: media-color-five
