--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ colors:
     - title: media-color-three
       color: "#ec1d24"
     - title: media-color-four
-      color: "#1c16fa"
-    - title: media-color-five
       color: "#f1f70c"
+    - title: media-color-five
+      color: "#ec1d24"
 description: ""
 permalink: none
 baseurl: ""
