{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"816"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -29,6 +29,7 @@ collections:
       - Academic Achievements/2021 GCE N Level.md
       - Academic Achievements/2020 GCE O Level.md
       - Academic Achievements/2020 GCE N Level.md
+      - Former Students' Achievements/2023.md
       - Former Students' Achievements/.keep
       - Former Students' Achievements/2022.md
       - Former Students' Achievements/2021.md
