--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -24,7 +24,7 @@ collections:
       - School Achievements/2020.md
       - Academic Achievements/.keep
       - Academic Achievements/2022 SEC Examinations (Part 2).md
-      - Academic Achievements/2022 SEC Examinations (Part1).md
+      - Academic Achievements/2022 GCE N Level.md
       - Academic Achievements/2021 GCE O Level.md
       - Academic Achievements/2021 GCE N Level.md
       - Academic Achievements/2020 GCE O Level.md
