{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"816"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -23,7 +23,7 @@ collections:
       - School Achievements/2021.md
       - School Achievements/2020.md
       - Academic Achievements/.keep
-      - Academic Achievements/2022 SEC Examinations (Part 2).md
+      - Academic Achievements/2022 GCE O Level.md
       - Academic Achievements/2022 GCE N Level.md
       - Academic Achievements/2021 GCE O Level.md
       - Academic Achievements/2021 GCE N Level.md
