--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -18,6 +18,7 @@ collections:
       - Staff/Useful Links for Staff.md
       - Alumni.md
       - Parent Support Group.md
+      - School Achievements/2023.md
       - School Achievements/.keep
       - School Achievements/2022.md
       - School Achievements/2021.md
