--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -5,11 +5,10 @@ collections:
       - Education and Career Guidance.md
       - ICT Matters.md
       - OPAC.md
-
       - Rules for Special Rooms/.keep
       - Rules for Special Rooms/Science Laboratory.md
       - Rules for Special Rooms/Design and Technology (D&T) Studio.md
-      - Rules for Special Rooms/FCE Food Laboratory.md
+      - Rules for Special Rooms/NFS Food Laboratory.md
       - Rules for Special Rooms/Computer Laboratory.md
       - Rules for Special Rooms/School Library.md
       - Students' Timetable.md
