{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"816"}

--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -12,6 +12,6 @@ collections:
       - Academic/Art.md
       - Academic/Computer Applications (CPA).md
       - Academic/Design & Technology (D&T).md
-      - Academic/Nutrition & Food Science.md
+      - Academic/Nutrition & Food Science (NFS).md
       - Academic/Music.md
       - Academic/Physical Education.md
