{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"816"}

--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -14,4 +14,4 @@ collections:
       - Academic/Design & Technology (D&T).md
       - Academic/Nutrition & Food Science (NFS).md
       - Academic/Music.md
-      - Academic/Physical Education.md
+      - Academic/Physical Education (PE).md
