{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"816"}

--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -7,7 +7,7 @@ collections:
       - Academic/Mathematics & POA.md
       - Academic/Science.md
       - Academic/Mother Tongue.md
-      - Academic/Humanities.md
+      - Academic/Humanities (Social Studies).md
       - Academic/Elements of Business Skills (EBS).md
       - Academic/Art.md
       - Academic/Computer Applications (CPA).md
