--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   curriculum:
     output: true
     order:
+      - Academic/Geography.md
       - Academic/.keep
       - Academic/English Language & Literature.md
       - Academic/Mathematics & POA.md
