{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"816"}

--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -8,7 +8,7 @@ collections:
       - Academic/Science.md
       - Academic/Mother Tongue.md
       - Academic/Humanities (Social Studies).md
-      - Academic/Geography.md
+      - Academic/Humanities (Geography).md
       - Academic/History.md
       - Academic/Art.md
       - Academic/Computer Applications (CPA).md
