--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -9,7 +9,7 @@ collections:
       - Academic/Mother Tongue.md
       - Academic/Humanities (Social Studies).md
       - Academic/Humanities (Geography).md
-      - Academic/History.md
+      - Academic/Humanities (History).md
       - Academic/Art.md
       - Academic/Computer Applications (CPA).md
       - Academic/Design & Technology (D&T).md
