{"message":"Update file: collection.yml","userId":"816","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -34,6 +34,7 @@ collections:
       - Former Students' Achievements/2022.md
       - Former Students' Achievements/2021.md
       - All Round Excellence Award.md
+      - Photo Gallery/2024.md
       - Photo Gallery/.keep
       - Photo Gallery/2023.md
       - Photo Gallery/2022.md
