fix(coillection): add missing files

--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -17,3 +17,9 @@ collections:
       - Academic/Nutrition & Food Science (NFS).md
       - Academic/Music.md
       - Academic/Physical Education (PE).md
+      - Non Academic/.keep
+      - Non Academic/Cyber Wellness.md
+      - Non Academic/Information & Communications Technology (ICT).md
+      - Non Academic/Student Leadership.md
+      - Non Academic/Student Management.md
+      - Non Academic/Values in Action (VIA).md
