fix(non-academic): shift stuff to correct folder

--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -23,3 +23,5 @@ collections:
       - Non Academic/Student Leadership.md
       - Non Academic/Student Management.md
       - Non Academic/Values in Action (VIA).md
+      - Non Academic/Character & Citizenship Education (CCE).md
+      - Non Academic/Education & Career Guidance (ECG).md
