{"message":"Update file: collection.yml","userId":"717","fileName":"collection.yml"}

--- a/_curriculum/collection.yml
+++ b/_curriculum/collection.yml
@@ -19,7 +19,7 @@ collections:
       - Academic/Physical Education (PE).md
       - Non Academic/.keep
       - Non Academic/Character & Citizenship Education (CCE).md
-      - Non Academic/CCE and ECG/Education & Career Guidance (ECG).md
+      - Non Academic/Education & Career Guidance (ECG).md
       - Non Academic/Cyber Wellness.md
       - Non Academic/Information & Communications Technology (ICT).md
       - Non Academic/Student Leadership.md
