--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -22,6 +22,7 @@ collections:
       - School Achievements/.keep
       - School Achievements/2022.md
       - School Achievements/2021.md
+      - Academic Achievements/2023 GCE N Level.md
       - Academic Achievements/.keep
       - Academic Achievements/2022 GCE O Level.md
       - Academic Achievements/2022 GCE N Level.md
