{"message":"Update file: navigation.yml","userId":"816","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/hero page header v5.jpg
+logo: /images/2024/hero_page_header_v6_copy.jpg
 links:
   - title: About Us
     collection: about-us
