--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - Assessment Topics/Secondary 1.md
       - Assessment Topics/.keep
       - Education and Career Guidance (ECG).md
       - ICT Matters.md
