{"message":"Update file: _config.yml","userId":"816","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ colors:
     - title: media-color-three
       color: "#ec1d24"
     - title: media-color-four
-      color: "#f1f70c"
+      color: "#f5a623"
     - title: media-color-five
       color: "#ec1d24"
 description: ""
